# Pi-Camera

./: .gitignore  CMakeLists.txt  QUICK_START_GUIDE.md  README.md  build.sh  build_preview.sh  build_recorder.sh  check_build.ps1  check_build.sh  check_build_simple.ps1  check_files.ps1  check_project.ps1  cinepi_preview.cpp  cinepi_raspberry_pi5_solution.md  cinepi_raw_recorder.cpp  performance_tester.sh  storage_manager.sh  system_setup_guide.md  verify_project.ps1
src/shared/: camera_controller.cpp  camera_controller.h  sdl_helper.cpp  sdl_helper.h
